<resources>
    <string name="app_name">Emotions</string>
    <string name="txt_1">  Ingrese su nombre</string>
    <string name="txt_4">  Ingrese su apellido</string>
    <string name="txt_2">Nombre</string>
    <string name="txt_3">. . .</string>
    <string name="txt_splash">Emotions</string>
    <string name="boton">Siguiente</string>
    <string name="boton2">Volver</string>
    <string name="boton3">Cerrar</string>
    <string name="c1">Feliz</string>
    <string name="c2">Triste</string>
    <string name="c3">Enojado</string>
    <string name="c4">frustrado</string>
    <string name="c5">enamorado</string>
    <string name="c6">confundido</string>
    <string name="c7">asustado</string>
    <string name="c8">facha</string>
    <string name="c9">payaso</string>
    <string name="imagen">logo</string>


</resources>
