<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="295dp"
        android:layout_height="97dp"
        android:layout_marginTop="100dp"
        android:text="@string/txt_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="381dp"
        android:layout_height="129dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

        <ImageButton
            android:id="@+id/c1"
            android:layout_width="116dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/c1"
            android:onClick="c1"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@mipmap/feliz" />

        <ImageButton
            android:id="@+id/c2"
            android:layout_width="127dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/c2"
            android:onClick="c2"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@mipmap/triste" />

        <ImageButton
            android:id="@+id/c3"
            android:layout_width="109dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/c3"
            android:onClick="c3"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@mipmap/enojada" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="360dp"
        android:layout_height="231dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt_3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>