<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/nom"
        android:layout_width="261dp"
        android:layout_height="68dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:autofillHints="@+id/nom"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txt_1"
        android:inputType="textPersonName"
        android:letterSpacing="0.025"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="191dp"
        android:layout_height="55dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="siguiente"
        android:text="@string/boton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom2" />

    <EditText
        android:id="@+id/nom2"
        android:layout_width="261dp"
        android:layout_height="68dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:autofillHints="@+id/nom2"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txt_4"
        android:inputType="textPersonName"
        android:letterSpacing="0.025"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="277dp"
        android:layout_height="259dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="40dp" /><![CDATA[











    "/>







]]>
</android.support.constraint.ConstraintLayout>